# TableEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  TableEngine.pro  vcpkg-configuration.json  vcpkg.json
main/: CMakeLists.txt  TableEngine.qrc  TableEngine_resource.rc.in  main.cpp  main.licenseheader  main.pro  version.h.in
main/Resources/highlight/: C++.highlight
main/Resources/stylesheet/: stylesheet_dark.css  stylesheet_light.css
src/: CMakeLists.txt  TableEngine.qrc  TeArchive.cpp  TeArchive.h  TeArchiveFinder.cpp  TeArchiveFinder.h  TeCloseEventEmitter.cpp  TeCloseEventEmitter.h  TeDispatchable.cpp  TeDispatchable.h  TeDispatcher.cpp  TeDispatcher.h  TeEventEmitter.cpp  TeEventEmitter.h  TeFileFinder.cpp  TeFileFinder.h  TeFileInfo.h  TeFileInfoAcsr.h  TeFinder.cpp  TeFinder.h  TeHistory.h  TeKeyMap.cpp  TeKeyMap.h  TeMenuIf.cpp  TeMenuIf.h  TeSettings.cpp  TeSettings.h  TeTypes.cpp  TeTypes.h  TeUtils.cpp  TeUtils.h  TeViewStore.cpp  TeViewStore.h  lib.pri  src.licenseheader  src.pro
src/commands/: TeArchiveFileInfoAcsr.cpp  TeCommandBase.cpp  TeCommandBase.h  TeCommandFactory.cpp  TeCommandFactory.h  TeCommandInfo.cpp  TeCommandInfo.h  TeSystemFileInfoAcsr.cpp  TeSystemFileInfoAcsr.h
src/commands/edit/: TeCmdCopy.cpp  TeCmdCopy.h  TeCmdCut.cpp  TeCmdCut.h  TeCmdPaste.cpp  TeCmdPaste.h  TeCmdSelectAll.cpp  TeCmdSelectAll.h  TeCmdSelectFilter.cpp  TeCmdSelectFilter.h  TeCmdSelectToggle.cpp  TeCmdSelectToggle.h  TeCmdSelectionStyle.cpp  TeCmdSelectionStyle.h
src/commands/file/: TeCmdArchive.cpp  TeCmdArchive.h  TeCmdArchiveCreate.cpp  TeCmdArchiveCreate.h  TeCmdChangeAttribute.cpp  TeCmdChangeAttribute.h  TeCmdCombineFile.cpp  TeCmdCombineFile.h  TeCmdCopyTo.cpp  TeCmdCopyTo.h  TeCmdDelete.cpp  TeCmdDelete.h  TeCmdDivideFile.cpp  TeCmdDivideFile.h  TeCmdExit.cpp  TeCmdExit.h  TeCmdExtract.cpp  TeCmdExtract.h  TeCmdFileCreate.cpp  TeCmdFileCreate.h  TeCmdMoveTo.cpp  TeCmdMoveTo.h  TeCmdOpenFile.cpp  TeCmdOpenFile.h  TeCmdProperties.cpp  TeCmdProperties.h  TeCmdRename.cpp  TeCmdRename.h  TeCmdRenameMulti.cpp  TeCmdRenameMulti.h  TeCmdRunCommand.cpp  TeCmdRunCommand.h
src/commands/folder/: TeCmdAddFavorite.cpp  TeCmdAddFavorite.h  TeCmdEditFavorites.cpp  TeCmdEditFavorites.h  TeCmdFind.cpp  TeCmdFind.h  TeCmdFolderChangeRoot.cpp  TeCmdFolderChangeRoot.h  TeCmdFolderCloseAll.cpp  TeCmdFolderCloseAll.h  TeCmdFolderCloseUnder.cpp  TeCmdFolderCloseUnder.h  TeCmdFolderCreate.cpp  TeCmdFolderCreate.h  TeCmdFolderOpenAll.cpp  TeCmdFolderOpenAll.h  TeCmdFolderOpenOne.cpp  TeCmdFolderOpenOne.h  TeCmdFolderOpenUnder.cpp  TeCmdFolderOpenUnder.h  TeCmdGotoFolder.cpp  TeCmdGotoFolder.h  TeCmdGotoParent.cpp  TeCmdGotoParent.h  TeCmdGotoRoot.cpp  TeCmdGotoRoot.h  TeCmdNextFolder.cpp  TeCmdNextFolder.h  TeCmdPrevFolder.cpp  TeCmdPrevFolder.h
src/commands/help/: TeCmdHelp.cpp  TeCmdHelp.h  TeCmdVersion.cpp  TeCmdVersion.h
src/commands/navi/: TeCmdNaviDetailScrollDown.cpp  TeCmdNaviDetailScrollDown.h  TeCmdNaviDetailScrollUp.cpp  (+15 more)
src/dialogs/: TeAskCreationModeDialog.cpp  TeAskCreationModeDialog.h  TeCmdTreeWidget.cpp  TeCmdTreeWidget.h  TeCombineDialog.cpp  TeCombineDialog.h  TeCommandInputDialog.cpp  TeCommandInputDialog.h  TeDivideDialog.cpp  TeDivideDialog.h  TeFilePathDialog.cpp  TeFilePathDialog.h  TeFilterDialog.cpp  TeFilterDialog.h  TeFindDialog.cpp  TeFindDialog.h  TeFontDialog.cpp  TeFontDialog.h  TeKeySetting.cpp  TeKeySetting.h  TeKeyTreeWidget.cpp  TeKeyTreeWidget.h  TeMenuSetting.cpp  TeMenuSetting.h  TeOptionSetting.cpp  TeOptionSetting.h  TePasswordDialog.cpp  TePasswordDialog.h  TePathListDialog.cpp  TePathListDialog.h  TePropertiesDialog.cpp  TePropertiesDialog.h  TeRenameMultiDialog.cpp  TeRenameMultiDialog.h  TeSelectPathDialog.cpp  TeSelectPathDialog.h  TeToolbarSetting.cpp  TeToolbarSetting.h
src/platform/: TeFileOperationManager.cpp  TeFileOperationManager.h  TeNativeEvent.cpp  TeNativeEvent.h  platform_util.h
src/template/: TeCmdTemplate.cpp  TeCmdTemplate.h
src/utils/: TeAdaptiveIconEngine.cpp  TeAdaptiveIconEngine.h  TeArchive.cpp  TeArchive.h  TeArchiveFileInfoAcsr.cpp  TeArchiveFileInfoAcsr.h  TeArchiveFinder.cpp  TeArchiveFinder.h  TeExifReader.h  TeFavorites.cpp  TeFavorites.h  TeFileFinder.cpp  TeFileFinder.h  TeFileInfo.cpp  TeFileInfo.h  TeFileInfoAcsr.cpp  TeFileInfoAcsr.h  TeFinder.cpp  TeFinder.h  TeFolderAppearance.cpp  TeFolderAppearance.h  TeHistory.cpp  TeHistory.h  TeImageLoader.cpp  TeImageLoader.h  TeQImageExifReader.cpp  TeQImageExifReader.h  TeSearchQuery.cpp  TeSearchQuery.h  TeStyleSheetBuilder.cpp  TeStyleSheetBuilder.h  TeSystemFileInfoAcsr.cpp  TeSystemFileInfoAcsr.h  TeThumbnailProvider.cpp  TeThumbnailProvider.h  TeUtils.cpp  TeUtils.h
src/widgets/: TeArchiveFolderView.cpp  TeArchiveFolderView.h  TeDetailView.cpp  TeDetailView.h  TeDriveBar.cpp  TeDriveBar.h  TeEventFilter.cpp  TeEventFilter.h  TeFileFolderView.cpp  TeFileFolderView.h  TeFileItemDelegate.cpp  TeFileItemDelegate.h  TeFileListView.cpp  TeFileListView.h  TeFileSortProxyModel.cpp  TeFileSortProxyModel.h  TeFileTreeView.cpp  TeFileTreeView.h  TeFindFolderView.cpp  TeFindFolderView.h  TeFolderView.cpp  TeFolderView.h  TeMainWindow.cpp  TeMainWindow.h  TePathFolderView.cpp  TePathFolderView.h  TeThumbnailProvider.cpp  TeThumbnailProvider.h  TeTreeWidget.cpp  TeTreeWidget.h
tests/: CMakeLists.txt  TestFileCreator.cpp  TestFileCreator.h  main.cpp  tests.licenseheader  tests.pro
tests/commands/: tst_TeCommandBase.cpp
tests/main/: tst_TeArchive.cpp  tst_TeDispatcher.cpp  tst_TeEventEmitter.cpp  tst_TeSettings.cpp  tst_TeTypes.cpp
tests/test_mock/: mock_TeDispatcher.h  mock_TeViewStore.h
tests/test_util/: FileEntry.cpp  FileEntry.h  ProgressTracker.cpp  ProgressTracker.h  TestFileCreator.cpp  TestFileCreator.h
tests/utils/: tst_TeArchive.cpp  tst_TeArchiveFinder.cpp  tst_TeFavorites.cpp  tst_TeFileFinder.cpp  tst_TeFileInfo.cpp  tst_TeHistory.cpp  tst_TeImageLoader.cpp  tst_TeSearchQuery.cpp  tst_TeUtils.cpp
tests/widgets/: tst_TeArchiveFolderView.cpp  tst_TeFileListView.cpp  tst_TeFileSortProxyModel.cpp
(+246 files in other folders)
